kubernetes/infrastructure/base/external-secrets/openbao/app/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: openbao
spec:
  hostnames: ["openbao.sud0.net"]
  parentRefs:
    - name: envoy-internal
      namespace: network
      sectionName: https
  rules:
    - backendRefs:
        - name: openbao-ui
          namespace: external-secrets
          port: 8200
      matches:
        - path:
            type: PathPrefix
            value: /
